# identifier_convention_checker

./: .gitignore  CMakeLists.txt  DOCKERFILE  README.md  check_identifiers.py  requirements.txt  run.py
.github/workflows/: checker-app.yml
fact_extraction_src/: CMakeLists.txt  check_naming_conventions.cpp
identifier_analysis_src/: code_antipatterns.py  scan_identifiers.html  scan_identifiers.py  test.cpp
scanner_source/: code_antipatterns.py  scan_identifiers.py  test_code.cpp.xml
src/: check_naming_conventions.cpp  check_naming_conventions.hpp
tests/: test_code.csv  test_name_checker.py
tests/code_artifacts/: code_containing_identifiers_to_test.cpp  test_code.cpp.xml
